--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "sirv-cli": "1.0.3"
   },
   "dependencies": {
+    "@vidstack/player": "^1.6.4",
+    "@vidstack/player-react": "^1.6.4",
+    "lit": "^2.4.0",
     "peerjs": "^1.4.7",
     "preact": "^10.3.2",
     "preact-render-to-string": "^5.1.4",
