--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     ]
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-preact-pure": "^2.0.0",
     "eslint": "^6.0.1",
@@ -33,7 +34,8 @@
     "peerjs": "^1.4.7",
     "preact": "^10.3.2",
     "preact-render-to-string": "^5.1.4",
-    "preact-router": "^3.2.1"
+    "preact-router": "^3.2.1",
+    "tailwindcss": "^3.2.0"
   },
   "jest": {
     "preset": "jest-preset-preact",
