feat: better ui

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "nadee",
-  "short_name": "nadee",
+  "name": "byos",
+  "short_name": "byos",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
