--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,8 +4,8 @@
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#fff",
-  "theme_color": "#673ab8",
+  "background_color": "#16213E",
+  "theme_color": "#E94560",
   "icons": [
     {
       "src": "/assets/icons/android-chrome-192x192.png",
