--- a/package.json
+++ b/package.json
@@ -28,15 +28,17 @@
     "sirv-cli": "1.0.3"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "@vidstack/player": "^1.6.4",
     "@vidstack/player-react": "^1.6.4",
+    "copy-to-clipboard": "^3.3.2",
     "lit": "^2.4.0",
+    "notistack": "^3.0.0-alpha.11",
     "peerjs": "^1.4.7",
     "preact": "^10.3.2",
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1",
-    "tailwindcss": "^3.2.0",
-    "@fullhuman/postcss-purgecss": "^5.0.0"
+    "tailwindcss": "^3.2.0"
   },
   "jest": {
     "preset": "jest-preset-preact",
