--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "preact": "^10.3.2",
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1",
+    "srt-webvtt": "^2.0.0",
     "tailwindcss": "^3.2.0"
   },
   "jest": {
